[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Pressure_Plate_Behaviour.gd" type="Script" id=1]
[ext_resource path="res://import/ghost_trap/ghost_trap.obj" type="ArrayMesh" id=2]
[ext_resource path="res://import/ghost_trap/ghost_trap_BaseMaterial_Normal.png" type="Texture" id=3]
[ext_resource path="res://import/ghost_trap/ghost_trap_BaseMaterial_Emissive.png" type="Texture" id=4]
[ext_resource path="res://import/ghost_trap/ghost_trap_BaseMaterial_Roughness.png" type="Texture" id=5]
[ext_resource path="res://import/ghost_trap/ghost_trap_BaseMaterial_Metallic.png" type="Texture" id=6]
[ext_resource path="res://import/ghost_trap/ghost_trap_BaseMaterial_BaseColor.png" type="Texture" id=7]
[ext_resource path="res://shaders/Ghost_Trap_Shader.tres" type="Shader" id=8]
[ext_resource path="res://import/ghost_trap/door/ghost_trap_door.obj" type="ArrayMesh" id=11]
[ext_resource path="res://import/ghost_trap/door/ghost_trap_door_Mat_Metallic.png" type="Texture" id=12]
[ext_resource path="res://import/ghost_trap/door/ghost_trap_door_Mat_BaseColor.png" type="Texture" id=13]
[ext_resource path="res://import/ghost_trap/door/ghost_trap_door_Mat_Roughness.png" type="Texture" id=14]

[sub_resource type="CylinderShape" id=76]
radius = 1.2
height = 3.0

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 7 )
metallic_texture = ExtResource( 6 )
roughness_texture = ExtResource( 5 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 10.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 4 )
normal_enabled = true
normal_scale = 2.0
normal_texture = ExtResource( 3 )

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.8
bottom_radius = 0.08
height = 5.0
rings = 8

[sub_resource type="ShaderMaterial" id=18]
shader = ExtResource( 8 )
shader_param/light_intensity = null

[sub_resource type="PlaneMesh" id=54]
size = Vector2( 0.19, 0.25 )

[sub_resource type="SpatialMaterial" id=55]
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0.52, 0.768, 1, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=74]
albedo_texture = ExtResource( 13 )
metallic_texture = ExtResource( 12 )
roughness_texture = ExtResource( 14 )

[sub_resource type="Animation" id=75]
resource_name = "door_open"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("ghost_trap_door:rotation_degrees:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 130, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ghost_trap_door2:rotation_degrees:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -180, -0.25, 0, 0.25, 0, -60, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[node name="Ghost_Trap" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 76 )

[node name="ghost_trap" type="MeshInstance" parent="."]
transform = Transform( -5.24537e-08, 0, 1.2, 0, 1.2, 0, -1.2, 0, -5.24537e-08, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 4 )

[node name="LightCone" type="Spatial" parent="."]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 0.95, 0.097, 0, 0 )

[node name="Light" type="MeshInstance" parent="LightCone"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 2.72175, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = SubResource( 18 )

[node name="Inside" type="MeshInstance" parent="LightCone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.206072, 0 )
visible = false
mesh = SubResource( 54 )
material/0 = SubResource( 55 )

[node name="OmniLight" type="OmniLight" parent="LightCone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0323333, 2.13984, 0 )
light_color = Color( 0.15, 0.4475, 1, 1 )
light_energy = 3.0
shadow_enabled = true
omni_attenuation = 3.0

[node name="ghost_trap_door" type="MeshInstance" parent="."]
transform = Transform( -5.24536e-08, 0, 1.2, 0, 1.2, 0, -1.2, 0, -5.24537e-08, 0.09, 0.234, 0.1 )
mesh = ExtResource( 11 )
material/0 = SubResource( 74 )

[node name="ghost_trap_door2" type="MeshInstance" parent="."]
transform = Transform( -5.24536e-08, -4.58564e-15, 1.2, -1.04907e-07, 1.2, 0, 1.2, 1.04907e-07, 5.24537e-08, 0.09, 0.234, -0.1 )
mesh = ExtResource( 11 )
material/0 = SubResource( 74 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/door_open = SubResource( 75 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
